# GoodRest

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  run.sh  vite.config.ts
docs/plans/: 2026-03-04-testing-module-design.md  2026-03-04-testing-module-implementation.md  2026-03-04-ui-optimization-design.md  2026-03-04-ui-optimization-implementation.md  2026-03-05-pomodoro-design.md  2026-03-05-settings-audio-tab-design.md
src/: App.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  timer.rs
src/__tests__/: constants.test.ts  reminderStore.test.ts  settingsStore.test.ts
src/components/: ReminderWindow.tsx  Settings.tsx  TomatoIcons.tsx
src/lib/: constants.ts  tauriEvents.ts
src/stores/: reminderStore.ts  settingsStore.ts
src/styles/: globals.css
src/test/: tauriEvents.test.ts
